visibility issue fix

--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -92,7 +92,7 @@ video{
 
 .previous-year{
     background: #FFF8F3;
-    background-image: url(/images/person.png);
+    background-image: url(../images/person.png);
     backface-visibility: visible;
     background-position: top left;
     background-repeat: no-repeat;
@@ -163,7 +163,7 @@ main li{
     border-radius: 10px;
     margin:60px 5px;
     padding:100px 130px;
-    background-image: url(/images/gradient3.png), url(/images/watch.png);
+    background-image: url(../images/gradient3.png), url(../images/watch.png);
     background-repeat: no-repeat;
     background-position: top left 20px;
     background-size: cover;
